Fix the type of data in the About Me section.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 						Prior to embarking on this exciting academic journey, I worked as a Senior Solutions
 						Analyst at <a href="https://loyalhealth.com">Loyal Health</a> for almost three years, where I
-						spearheaded the management and enhancement of listings data, ensuring the dissemination
+						spearheaded the management and enhancement of healthcare listings data, ensuring the dissemination
 						of accurate and comprehensive information across various third party listing management
 						platforms including Google, Bing, Apple, Facebook, and Foursquare. </br> </br>
 
