Improvements to the Home section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
 							Data
 							Scientist</a> at U-M.</p>
 					<p>I'm actively seeking full-time opportunities in data science, machine learning, and analytics for
-						2025—let’s connect!</p>
+						2025. I invite you to explore my <a href="#portfolio">portfolio</a> and <a
+							href="docs/resume.pdf" target="_blank">résumé</a> — I'm happy to connect and explore
+						opportunities together!
+					</p>
+					</p>
 				</header>
 
 				<div id="navlogo">
