--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 					<div class="about-grid">
 						<div class="origin-story">
-							<h3 style="color: #e27689;"><i class="fas fa-mountain"></i> Roots</h3>
+							<h3 style="color: #e27689;"><i class="fas fa-tree"></i> Roots</h3>
 							<p>I was born and raised in <a href="https://en.wikipedia.org/wiki/Kathmandu"
 									target="_blank">
 									Kathmandu, Nepal 🇳🇵</a>, where I learned the value of community and resilience.
