Add a NLP project to portfolio.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 					<h2 style="color: white;">Portfolio</h2>
 				</header>
 				<div class="row">
+
 					<!-- Web Development Projects -->
 					<div class="col-5 col-12-mobile">
 						<h3>Web Development & Applications</h3>
@@ -216,31 +217,6 @@
 						<h3>Data Science & Machine Learning</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being.');"><span
-									class="label">Info</span></a>
-							<a href="https://anupamabhatta.github.io/forecasting-happiness" target="_blank"
-								rel="noopener noreferrer"
-								title="This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being."><span
-									class="label">&#160;Forecasting Happiness&#160;</span></a>
-							<a href="https://anupamabhatta.github.io/forecasting-happiness"
-								class="icon solid fa-file-code" target="_blank" rel="noopener noreferrer"
-								title="View Report"><span class="label">View Report</span></a>
-						</article>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
-									class="label">Info</span></a>
-							<a href="docs/nepal-tourism.pdf" target="_blank" rel="noopener noreferrer"
-								title="This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal's tourism sector."><span
-									class="label">&#160;Nepal Tourism Review&#160;</span></a>
-							<a href="docs/nepal-tourism.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
-							<a href="https://anupamabhatta.github.io/nepal-tourism" class="icon solid fa-file-code"
-								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
-									Code</span></a>
-						</article>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This research explores how network analysis of Steam\'s user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences.');"><span
 									class="label">Info</span></a>
 							<a href="docs/networks.pdf" target="_blank" rel="noopener noreferrer"
@@ -251,6 +227,18 @@
 							<a href="https://anupamabhatta.github.io/networks" class="icon solid fa-file-code"
 								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
 									Code</span></a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being.');"><span
+									class="label">Info</span></a>
+							<a href="https://anupamabhatta.github.io/forecasting-happiness" target="_blank"
+								rel="noopener noreferrer"
+								title="This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being."><span
+									class="label">&#160;Forecasting Happiness&#160;</span></a>
+							<a href="https://anupamabhatta.github.io/forecasting-happiness"
+								class="icon solid fa-file-code" target="_blank" rel="noopener noreferrer"
+								title="View Report"><span class="label">View Report</span></a>
 						</article>
 					</div>
 
@@ -297,9 +285,42 @@
 
 				<!-- Second Row -->
 				<div class="row" style="margin-top: 2em;">
-					<!-- Mathematics -->
+
+					<!-- Natural Language Processing -->
+					<div class="col-4 col-12-mobile">
+						<h3>Natural Language Processing</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
+									class="label">Info</span></a>
+							<a href="docs/nepal-tourism.pdf" target="_blank" rel="noopener noreferrer"
+								title="This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal's tourism sector."><span
+									class="label">&#160;Nepal Tourism Review&#160;</span></a>
+							<a href="docs/nepal-tourism.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
+							<a href="https://anupamabhatta.github.io/nepal-tourism" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
+									Code</span></a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms.');"><span
+									class="label">Info</span></a>
+							<a href="https://anupamabhatta.github.io/word2vec/" target="_blank"
+								rel="noopener noreferrer"
+								title="This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms."><span
+									class="label">&#160;Word2Vec from Scratch&#160;</span></a>
+							<a href="docs/writeup.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
+							<a href="https://anupamabhatta.github.io/word2vec/" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
+									Code</span></a>
+						</article>
+					</div>
+
+					<!-- Mathematics & Advanced Analytics -->
 					<div class="col-5 col-12-mobile">
-						<h3>Mathematics</h3>
+						<h3>Mathematics & Advanced Analytics</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This document validates Bayes\' rule for conditional entropy by solving five key questions related to the entropy, conditional entropy, and mutual information between creatures\' size and color, with both manual calculations and code validation.');"><span
@@ -312,9 +333,9 @@
 						</article>
 					</div>
 
-					<!-- Ethics -->
+					<!-- Data Ethics & Research -->
 					<div class="col-3 col-12-mobile">
-						<h3>Information Ethics</h3>
+						<h3>Data Ethics & Research</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology.');"><span
@@ -328,21 +349,6 @@
 						</article>
 					</div>
 
-					<!-- Consulting -->
-					<div class="col-4 col-12-mobile">
-						<h3>Consulting</h3>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This report summarizes a team investigation into encouraging positive consumer behavior for water conservation and pollution prevention in Michigan.');"><span
-									class="label">Info</span></a>
-							<a href="docs/final-report.pdf" target="_blank" rel="noopener noreferrer"
-								title="This report summarizes a team investigation into encouraging positive consumer behavior for water conservation and pollution prevention in Michigan."><span
-									class="label">&#160;Water Conservation&#160;</span></a>
-							<a href="docs/final-report.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report"><span class="label">View
-									Report</span></a>
-						</article>
-					</div>
 				</div>
 
 				<footer>
