Updates to a portfolio title.

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
 					<!-- Data Ethics & Research -->
 					<div class="col-3 col-12-mobile">
-						<h3>Data Ethics & Research</h3>
+						<h3>Information Ethics & Research</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology.');"><span
