Rearrange portfolio items.

--- a/index.html
+++ b/index.html
@@ -162,6 +162,101 @@
 				</header>
 				<div class="row">
 
+					<!-- Data Science Projects -->
+					<div class="col-3 col-12-mobile">
+						<h3>Data Science & Machine Learning</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being.');"><span
+									class="label">Info</span></a>
+							<a href="https://anupamabhatta.github.io/forecasting-happiness" target="_blank"
+								rel="noopener noreferrer"
+								title="This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being."><span
+									class="label">&#160;Forecasting Happiness&#160;</span></a>
+							<a href="https://anupamabhatta.github.io/forecasting-happiness"
+								class="icon solid fa-file-code" target="_blank" rel="noopener noreferrer"
+								title="View Report"><span class="label">View Report</span></a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This research explores how network analysis of Steam\'s user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences.');"><span
+									class="label">Info</span></a>
+							<a href="docs/networks.pdf" target="_blank" rel="noopener noreferrer"
+								title="This research explores how network analysis of Steam's user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences."><span
+									class="label">&#160;Network Analysis&#160;</span></a>
+							<a href="docs/networks.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
+							<a href="https://anupamabhatta.github.io/networks" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
+									Code</span></a>
+						</article>
+					</div>
+
+					<!-- Natural Language Processing -->
+					<div class="col-4 col-12-mobile">
+						<h3>Natural Language Processing</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
+									class="label">Info</span></a>
+							<a href="docs/nepal-tourism.pdf" target="_blank" rel="noopener noreferrer"
+								title="This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal's tourism sector."><span
+									class="label">&#160;Nepal Tourism Review&#160;</span></a>
+							<a href="docs/nepal-tourism.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
+							<a href="https://anupamabhatta.github.io/nepal-tourism" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
+									Code</span></a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms.');"><span
+									class="label">Info</span></a>
+							<a href="https://anupamabhatta.github.io/word2vec/" target="_blank"
+								rel="noopener noreferrer"
+								title="This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms."><span
+									class="label">&#160;Word2Vec from Scratch&#160;</span></a>
+							<a href="docs/writeup.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
+							<a href="https://anupamabhatta.github.io/word2vec/" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
+									Code</span></a>
+						</article>
+					</div>
+
+					<!-- Design & Visualization -->
+					<div class="col-4 col-12-mobile">
+						<h3>Data Analytics & Visualization</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy.');"><span
+									class="label">Info</span></a>
+							<a href="https://anupamabhatta.github.io/global-diet" target="_blank"
+								rel="noopener noreferrer"
+								title="This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy."><span
+									class="label">&#160;Global Dietary Patterns
+									&#160;</span></a>
+							<a href="https://anupamabhatta.github.io/global-diet" class="icon solid fa-file-code"
+								target="_blank" rel="noopener noreferrer" title="View Report"><span class="label">View
+									Report</span></a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('Static snapshots of Google Business Profile (GBP) monthly reports, featuring visualizations of client insights and ratings. All client-specific information has been redacted for privacy.');"><span
+									class="label">Info</span></a>
+							<a href="docs/reports.pdf" target="_blank" rel="noopener noreferrer"
+								title="Static snapshots of Google Business Profile (GBP) monthly reports, featuring visualizations of client insights and ratings. All client-specific information has been redacted for privacy."><span
+									class="label">&#160;GBP Analytics Reports&#160;</span></a>
+							<a href="docs/reports.pdf" class="icon solid fa-folder" target="_blank"
+								rel="noopener noreferrer" title="View Reports">
+								<span class="label">View Reports</span></a>
+						</article>
+					</div>
+				</div>
+
+				<!-- Second Row -->
+				<div class="row" style="margin-top: 2em;">
+
 					<!-- Web Development Projects -->
 					<div class="col-5 col-12-mobile">
 						<h3>Web Development & Applications</h3>
@@ -212,62 +307,19 @@
 						</article>
 					</div>
 
-					<!-- Data Science Projects -->
+					<!-- Ethics Research & Visual Design -->
 					<div class="col-3 col-12-mobile">
-						<h3>Data Science & Machine Learning</h3>
+						<h3>Ethics Research & Visual Design</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This research explores how network analysis of Steam\'s user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences.');"><span
+								onclick="alert('This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology.');"><span
 									class="label">Info</span></a>
-							<a href="docs/networks.pdf" target="_blank" rel="noopener noreferrer"
-								title="This research explores how network analysis of Steam's user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences."><span
-									class="label">&#160;Network Analysis&#160;</span></a>
-							<a href="docs/networks.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
-							<a href="https://anupamabhatta.github.io/networks" class="icon solid fa-file-code"
-								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
-									Code</span></a>
-						</article>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being.');"><span
-									class="label">Info</span></a>
-							<a href="https://anupamabhatta.github.io/forecasting-happiness" target="_blank"
-								rel="noopener noreferrer"
-								title="This project aims to predict global happiness trends for 2024 by analyzing socio-economic factors like GDP, income, layoffs, and social support, using machine learning techniques to guide policy decisions for improving global well-being."><span
-									class="label">&#160;Forecasting Happiness&#160;</span></a>
-							<a href="https://anupamabhatta.github.io/forecasting-happiness"
-								class="icon solid fa-file-code" target="_blank" rel="noopener noreferrer"
-								title="View Report"><span class="label">View Report</span></a>
-						</article>
-					</div>
-
-					<!-- Design & Visualization -->
-					<div class="col-4 col-12-mobile">
-						<h3>Data Analytics & Visualization</h3>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy.');"><span
-									class="label">Info</span></a>
-							<a href="https://anupamabhatta.github.io/global-diet" target="_blank"
-								rel="noopener noreferrer"
-								title="This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy."><span
-									class="label">&#160;Global Dietary Patterns
-									&#160;</span></a>
-							<a href="https://anupamabhatta.github.io/global-diet" class="icon solid fa-file-code"
+							<a href="docs/facial-recognition-presentation.pdf" target="_blank" rel="noopener noreferrer"
+								title="This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology."><span
+									class="label">&#160;Facial Recognition Ethics&#160;</span></a>
+							<a href="docs/facial-recognition-presentation.pdf" class="icon solid fa-file-pdf"
 								target="_blank" rel="noopener noreferrer" title="View Report"><span class="label">View
 									Report</span></a>
-						</article>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('Static snapshots of Google Business Profile (GBP) monthly reports, featuring visualizations of client insights and ratings. All client-specific information has been redacted for privacy.');"><span
-									class="label">Info</span></a>
-							<a href="docs/reports.pdf" target="_blank" rel="noopener noreferrer"
-								title="Static snapshots of Google Business Profile (GBP) monthly reports, featuring visualizations of client insights and ratings. All client-specific information has been redacted for privacy."><span
-									class="label">&#160;GBP Analytics Reports&#160;</span></a>
-							<a href="docs/reports.pdf" class="icon solid fa-folder" target="_blank"
-								rel="noopener noreferrer" title="View Reports">
-								<span class="label">View Reports</span></a>
 						</article>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
@@ -281,42 +333,7 @@
 								<span class="label">View Designs</span></a>
 						</article>
 					</div>
-				</div>
 
-				<!-- Second Row -->
-				<div class="row" style="margin-top: 2em;">
-
-					<!-- Natural Language Processing -->
-					<div class="col-4 col-12-mobile">
-						<h3>Natural Language Processing</h3>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
-									class="label">Info</span></a>
-							<a href="docs/nepal-tourism.pdf" target="_blank" rel="noopener noreferrer"
-								title="This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal's tourism sector."><span
-									class="label">&#160;Nepal Tourism Review&#160;</span></a>
-							<a href="docs/nepal-tourism.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
-							<a href="https://anupamabhatta.github.io/nepal-tourism" class="icon solid fa-file-code"
-								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
-									Code</span></a>
-						</article>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms.');"><span
-									class="label">Info</span></a>
-							<a href="https://anupamabhatta.github.io/word2vec/" target="_blank"
-								rel="noopener noreferrer"
-								title="This project implements Word2Vec from scratch to create low-dimensional word embeddings, capturing semantic relationships between words and applying them to sentiment analysis using attention mechanisms."><span
-									class="label">&#160;Word2Vec from Scratch&#160;</span></a>
-							<a href="docs/writeup.pdf" class="icon solid fa-file-pdf" target="_blank"
-								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
-							<a href="https://anupamabhatta.github.io/word2vec/" class="icon solid fa-file-code"
-								target="_blank" rel="noopener noreferrer" title="View Code"><span class="label">View
-									Code</span></a>
-						</article>
-					</div>
 
 					<!-- Mathematics & Advanced Analytics -->
 					<div class="col-5 col-12-mobile">
@@ -332,23 +349,6 @@
 								rel="noopener noreferrer" title="View Report"><span class="label">View Report</span></a>
 						</article>
 					</div>
-
-					<!-- Data Ethics & Research -->
-					<div class="col-3 col-12-mobile">
-						<h3>Information Ethics & Research</h3>
-						<article class="item">
-							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
-								onclick="alert('This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology.');"><span
-									class="label">Info</span></a>
-							<a href="docs/facial-recognition-presentation.pdf" target="_blank" rel="noopener noreferrer"
-								title="This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology."><span
-									class="label">&#160;Facial Recognition Ethics&#160;</span></a>
-							<a href="docs/facial-recognition-presentation.pdf" class="icon solid fa-file-pdf"
-								target="_blank" rel="noopener noreferrer" title="View Report"><span class="label">View
-									Report</span></a>
-						</article>
-					</div>
-
 				</div>
 
 				<footer>
