--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 					<!-- Natural Language Processing -->
 					<div class="col-4 col-12-mobile">
-						<h3>Natural Language Processing</h3>
+						<h3>Natural Language Processing (NLP)</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
@@ -226,7 +226,7 @@
 
 					<!-- Design & Visualization -->
 					<div class="col-4 col-12-mobile">
-						<h3>Data Analytics & Visualization</h3>
+						<h3>Data Analytics & Information Visualization</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy.');"><span
