--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 					<!-- Design & Visualization -->
 					<div class="col-4 col-12-mobile">
-						<h3>Data Analytics & Information Visualization</h3>
+						<h3>Data Analytics & Visualization</h3>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy.');"><span
