Update personal website with new projects

--- a/index.html
+++ b/index.html
@@ -179,6 +179,28 @@
 						</article>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This capstone project transformed the Jane Addams Digital Edition through three complementary tools: an interactive network visualization mapping social relationships, a topics-over-time visualization tracking thematic evolution, and an LLM-powered query interface for conversational archive exploration. The system processes 55,000+ historical documents to make Progressive Era reform movements more accessible to scholars and the public.');">
+								<span class="label">Info</span>
+							</a>
+							<a href="docs/jane-addams-report.pdf" target="_blank" rel="noopener noreferrer"
+								title="This capstone project transformed the Jane Addams Digital Edition through three complementary tools: an interactive network visualization mapping social relationships, a topics-over-time visualization tracking thematic evolution, and an LLM-powered query interface for conversational archive exploration.">
+								<span class="label">&#160;Jane Addams Archive&#160;</span>
+							</a>
+							<!-- <a href="docs/jane-addams-report.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report">
+								<span class="label">View Report</span>
+							</a> -->
+							<a href="docs/jane-addams-poster.pdf" class="icon solid fa-file-image" target="_blank"
+								rel="noopener noreferrer" title="View Poster">
+								<span class="label">View Poster</span>
+							</a>
+							<a href="https://github.com/anupamabhatta/si699-ramapo" class="icon brands fa-github"
+								target="_blank" rel="noopener noreferrer" title="GitHub Repository">
+								<span class="label">GitHub</span>
+							</a>
+						</article>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This research explores how network analysis of Steam\'s user interactions can enhance game recommendations, reduce latency, and optimize data distribution to address scaling challenges while maintaining personalized user experiences.');"><span
 									class="label">Info</span></a>
 							<a href="docs/networks.pdf" target="_blank" rel="noopener noreferrer"
@@ -195,6 +217,27 @@
 					<!-- Natural Language Processing -->
 					<div class="col-4 col-12-mobile">
 						<h3>Natural Language Processing (NLP)</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This project applies machine learning and natural language processing to analyze meeting dynamics in \'The Office\' (US) TV series. Using logistic regression models with sentiment analysis, character interaction patterns, and contextual features extracted from episode transcripts, the system predicts whether workplace meetings will succeed or fail.');">
+								<span class="label">Info</span>
+							</a>
+							<a href="https://anupamabhatta.github.io/office-meeting-predictor/" target="_blank"
+								rel="noopener noreferrer"
+								title="This project applies machine learning and natural language processing to analyze meeting dynamics in 'The Office' (US) TV series. Using logistic regression models with sentiment analysis, character interaction patterns, and contextual features extracted from episode transcripts, the system predicts whether workplace meetings will succeed or fail.">
+								<span class="label">&#160;The Office Predictor&#160;</span>
+							</a>
+							<a href="https://anupamabhatta.github.io/office-meeting-predictor/"
+								class="icon solid fa-play-circle" target="_blank" rel="noopener noreferrer"
+								title="Interact with Predictor">
+								<span class="label">Interact</span>
+							</a>
+							<a href="https://github.com/anupamabhatta/office-meeting-predictor"
+								class="icon brands fa-github" target="_blank" rel="noopener noreferrer"
+								title="GitHub Repository">
+								<span class="label">GitHub</span>
+							</a>
+						</article>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This study analyzes 7,102 tourist reviews across 10 major destinations in Nepal, using a hybrid sentiment analysis approach to assess tourist satisfaction and regional variations, uncovering key factors influencing experiences to guide improvements in Nepal\'s tourism sector.');"><span
@@ -227,6 +270,26 @@
 					<!-- Design & Visualization -->
 					<div class="col-4 col-12-mobile">
 						<h3>Data Analytics & Visualization</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('Interactive visualization of Jane Addams\' social and professional network (1901-1935). Features color-coded relationship categories, dynamic timeline filtering, and detailed context for each correspondent in her extensive Progressive Era communications.');">
+								<span class="label">Info</span>
+							</a>
+							<a href="https://anupamabhatta.github.io/jane-addams-network/" target="_blank"
+								rel="noopener noreferrer"
+								title="Interactive visualization of Jane Addams' social and professional network (1901-1935). Features color-coded relationship categories, dynamic timeline filtering, and detailed context for each correspondent.">
+								<span class="label">&#160;Addams Network&#160;</span>
+							</a>
+							<a href="https://anupamabhatta.github.io/jane-addams-network/"
+								class="icon solid fa-play-circle" target="_blank" rel="noopener noreferrer"
+								title="Interact with Visualization">
+								<span class="label">Interact</span>
+							</a>
+							<a href="https://github.com/anupamabhatta/jane-addams-network" class="icon brands fa-github"
+								target="_blank" rel="noopener noreferrer" title="GitHub Repository">
+								<span class="label">GitHub</span>
+							</a>
+						</article>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This study uses Tableau visualization to analyze 60 years of global dietary data, revealing the connections between food patterns, nutrition, and longevity, and offering insights into how dietary diversity and macronutrient intake influence global health trends and life expectancy.');"><span
@@ -310,6 +373,24 @@
 					<!-- Ethics Research & Visual Design -->
 					<div class="col-3 col-12-mobile">
 						<h3>Ethics Research & Visual Design</h3>
+						<article class="item">
+							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
+								onclick="alert('This case study analyzes data privacy concerns in period tracking applications, examining ethical tensions between user privacy rights and corporate data monetization, particularly in the post-Roe landscape where reproductive health data has acquired new legal significance and potential risks.');">
+								<span class="label">Info</span>
+							</a>
+							<a href="docs/period-tracking-privacy.pdf" target="_blank" rel="noopener noreferrer"
+								title="This case study analyzes data privacy concerns in period tracking applications, examining ethical tensions between user privacy rights and corporate data monetization, particularly in the post-Roe landscape where reproductive health data has acquired new legal significance and potential risks.">
+								<span class="label">&#160;Reproductive Privacy&#160;</span>
+							</a>
+							<a href="docs/period-tracking-privacy.pdf" class="icon solid fa-file-pdf" target="_blank"
+								rel="noopener noreferrer" title="View Report">
+								<span class="label">View Report</span>
+							</a>
+							<a href="docs/period-tracking-poster.pdf" class="icon solid fa-file-image" target="_blank"
+								rel="noopener noreferrer" title="View Poster">
+								<span class="label">View Poster</span>
+							</a>
+						</article>
 						<article class="item">
 							<a href="#portfolio" class="icon solid fa-info-circle" title="View Info"
 								onclick="alert('This slide deck examines the ethical implications of facial recognition technology in law enforcement, focusing on bias mitigation, civil liberties, and the responsible, transparent deployment of the technology.');"><span
